# interference

./: .gitignore  .npmignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  package.json  pyproject.toml  tsconfig.json
.agentic/: config.yaml
.claude/decisions/: README.md
.claude/memory/: README.md  orchestrator-status.md  providers-setup.md  ssd-path-status.md
.claude/skills/: README.md  interference-tool.md
.github/workflows/: ci.yml  deploy-site.yml  publish.yml
assets/: demo.cast
docs/: architettura.md  requisiti.md  risorse.md
interference/: __init__.py  cli.py  config.py  machine.py
interference/glue/: __init__.py  opencode.py
interference/landing/: __init__.py  server.py
interference/manager/: __init__.py  download.py  registry.py  storage.py
interference/orchestrator/: __init__.py  pool.py  routing.py  server.py
interference/scout/: __init__.py  fit.py  metadata.py  search.py
logo/: index.html  site.webmanifest
scripts/: deploy-site.sh  e2e-test.ts  gen-demo.ts  record-demo.ts
site/: index.html  main.js  styles.css
src/: auth.ts  catalog.ts  cli-headless.ts  cli-plain.ts  cli.ts  config-file.ts  config.ts  context.ts  cost.ts  git.ts  models-snapshot.ts  openrouter.ts  paths.ts  permissions.ts  projectMemory.ts  provider.ts  skills.ts  version.ts
src/__tests__/: catalog.test.ts  commands-model.test.ts  confirm-queue.test.ts  cost.test.ts  headless.test.ts  openrouter.test.ts  preferences.test.ts  project-memory.test.ts  provider.test.ts  reasoning-config.test.ts  version.test.ts
src/agent/: compaction.ts  loop.ts  (+4 more)
(+100 files in other folders)
