[project]
name = "interference"
version = "0.1.0"
description = "Run coding LLMs locally on Apple Silicon — discover, download to external SSD, serve via OpenAI-compatible API."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Riccardo Civiero"},
]
keywords = ["llm", "coding", "mlx", "apple-silicon", "opencode", "local-inference", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Repository = "https://github.com/ricciviero/interference"
Issues = "https://github.com/ricciviero/interference/issues"

dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "huggingface-hub>=0.24",
]

[project.optional-dependencies]
# Runtime di inferenza: pesante e specifico Apple Silicon. Installare con:
#   uv sync --extra serve
serve = [
    "mlx-lm>=0.18",
    "fastapi>=0.111",
    "uvicorn>=0.30",
]

[project.scripts]
interference = "interference.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["interference"]


